apply plugin: "java"

version '1.0'

sourceCompatibility = JavaVersion.VERSION_16

sourceSets.main.java.srcDirs = ["src"]

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

repositories{
    mavenCentral()
    maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
    maven{ url 'https://www.jitpack.io' }
}

ext{
    //the build number that this plugin is made for
    mindustryVersion = 'v146'
    jabelVersion = "93fde537c7"
}



dependencies{
    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"

	compileOnly 'org.projectlombok:lombok:1.18.32'
    
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.2'
	
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
	annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
}

jar{
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    archiveFileName = "${project.archivesBaseName}.jar"
    from{
        configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
    }

    from(rootDir){
        include "plugin.json"
    }
}
